--- a/shoeshop/src/main/resources/templates/accueil.html
+++ b/shoeshop/src/main/resources/templates/accueil.html
@@ -7,10 +7,29 @@
 		<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 	</head>
 	<body>
-		<div class="container">
-			<div th:replace="fragment/shoe :: shoe-list"></div>
+		<nav class="navbar navbar-expand-lg navbar-light" style="background: linear-gradient(to right, #6c757d, #c2c9cf);">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Shoeshop</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="admin/">Admin<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="accueil">Home<span class="sr-only">(current)</span></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="table-responsive">
+    		<table class="table align-middle">
+				<div th:replace="fragment/shoe :: shoe-list"></div>
+    		</table>
 		</div>
-
 		<div th:replace="fragment/common :: webjar-footer"></div>
 	</body>
 </html>
