--- a/shoeshop/src/main/resources/templates/accueil.html
+++ b/shoeshop/src/main/resources/templates/accueil.html
@@ -16,10 +16,10 @@
 				<div class="navbar-nav me-auto mb-2 mb-lg-0">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="admin/">Admin<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="admin/">Admin<span class="sr-only"></span></a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="accueil">Home<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="accueil">Home<span class="sr-only"></span></a>
 						</li>
 					</ul>
 				</div>
