--- a/shoeshop/src/main/resources/templates/admin/accueil.html
+++ b/shoeshop/src/main/resources/templates/admin/accueil.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Shoeshop - Administration</title>
-		<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 		<link rel="shortcut icon" type="image/png" th:href="@{../favicon.ico}"/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+	    <link href="public/css/general.css" rel="stylesheet">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light" style="background: linear-gradient(to right, #6c757d, #c2c9cf);">
@@ -17,7 +19,10 @@
 				<div class="navbar-nav me-auto mb-2 mb-lg-0">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="/accueil">Home<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="admin/">Admin<span class="sr-only"></span></a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="/accueil">Home<span class="sr-only"></span></a>
 						</li>
 					</ul>
 				</div>
