--- a/shoeshop/src/main/resources/templates/fragment/shoe.html
+++ b/shoeshop/src/main/resources/templates/fragment/shoe.html
@@ -1,4 +1,7 @@
 <div th:fragment="shoe-list">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+<link href="public/css/general.css" rel="stylesheet">
 <h1>Liste des chaussures</h1>	
 	<div class="table-responsive">
     	<table class="table align-middle">
@@ -55,14 +58,14 @@
 	<div class="d-flex justify-content-center">
 		<form action="#" th:action="@{/accueil}" method="get">
 			<input type="hidden" th:value="${pageNumber}-1" name="pageNumber" />
-			<button type="submit" class="btn btn-secondary mr-1">Previous</button>
+			<button type="submit" class="btn btn-secondary mr-1"><span class="bi bi-arrow-left"></span></button>
 		</form>
 			<label>  </label>
 		<form>
 		</form>
 		<form action="#" th:action="@{/accueil}" method="get">
 			<input type="hidden" th:value="${pageNumber}+1" name="pageNumber" />
-			<button type="submit" class="btn btn-secondary">Next</button>
+			<button type="submit" class="btn btn-secondary mr-1"><span class="bi bi-arrow-right"></span></button>
 		</form>
 	</div>
 </div>
