--- a/shoeshop/src/main/resources/templates/fragment/shoe.html
+++ b/shoeshop/src/main/resources/templates/fragment/shoe.html
@@ -2,7 +2,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 <link href="public/css/general.css" rel="stylesheet">
-<h1>Liste des chaussures</h1>	
+<h1>Shoes list</h1>	
 	<div class="table-responsive">
     	<table class="table align-middle">
 			 <thead>
