--- a/shoeshop/src/main/resources/templates/fragment/shoe.html
+++ b/shoeshop/src/main/resources/templates/fragment/shoe.html
@@ -14,6 +14,7 @@
 				  <th scope="col">Stock</th>
 				  <th scope="col" th:if="${isAdmin}"/>
 				  <th scope="col" th:if="${isAdmin}"/>
+				  <th scope="col" th:if="${isAdmin}"/>
 				  <th scope="col" th:if="${isPublic}">Evaluate</th>
 				  <th scope="col">Popularity</th>
 				</tr>
@@ -37,6 +38,12 @@
 							<button type="submit" class="btn btn-secondary">Modify</button>
 						</form>
 					</td>
+					<td th:if="${isAdmin}">
+						<form action="#" th:action="@{/admin/show-shoe}" th:object="${shoe}" method="post">
+							<input type="hidden" th:value="${shoe.id}" name="id" />
+							<button type="submit" class="btn btn-secondary">Show</button>
+						</form>
+					</td>
 					<td th:if="${isPublic}">
 						<form action="#" th:action="@{/evaluate}" method="post">
 							<select name="note" style="width: 40px"> class="form-control" id="eval">
@@ -55,6 +62,7 @@
 			</tbody>
 		</table>
 	</div>
+	<!-- pagination buttons -->
 	<div class="d-flex justify-content-center">
 		<form action="#" th:action="@{/accueil}" method="get">
 			<input type="hidden" th:value="${pageNumber}-1" name="pageNumber" />
