--- a/shoeshop/src/main/resources/templates/fragment/shoe.html
+++ b/shoeshop/src/main/resources/templates/fragment/shoe.html
@@ -64,7 +64,7 @@
 	</div>
 	<!-- pagination buttons -->
 	<div class="d-flex justify-content-center">
-		<form action="#" th:action="@{/accueil}" method="get">
+		<form action="#" th:action="@{/}" method="get">
 			<input type="hidden" th:value="${pageNumber}-1" name="pageNumber" />
 			<button type="submit" class="btn btn-secondary mr-1"><span class="bi bi-arrow-left"></span></button>
 		</form>
@@ -79,35 +79,85 @@
 </div>
 
 <div th:fragment="new-shoe">
-	<h1 th:if="${isNew}">Inserting a new shoe</h1>
-	<h1 th:if="${isEdit}">Modifiying a shoe</h1>
-	<form action="#" th:action="@{/admin/save-shoe}" th:object="${shoe}" method="post">  
-		<div th:if="${isEdit}" class="form-group">   
-	     	<label for="id" th:text="Id"></label>
-	        <input type="text"  class="form-control" th:required="required" readonly th:field="*{id}" />
+	<div class="container-sm">
+    <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-7">
+        	<h1 th:if="${isNew}">Inserting a new shoe</h1>
+			<h1 th:if="${isEdit}">Modifiying a shoe</h1>
+            <div class="row g-3">
+				<form action="#" th:action="@{/admin/save-shoe}" th:object="${shoe}" method="post">  
+					<div th:if="${isEdit}" class="form-group">   
+				     	<label for="id" th:text="Id"></label>
+				        <input type="text"  class="form-control" th:required="required" readonly th:field="*{id}" />
+					</div>
+					<div class="form-group">   
+						<label for="name" th:text="Name"></label>
+				        <input type="text"  class="form-control" th:required="required" th:field="*{name}" />
+					</div>
+					<div class="form-group">   
+						<label for="color" th:text="Color"></label>
+				        <input type="text"  class="form-control" th:required="required" th:field="*{color}" />
+					</div>
+					<div class="form-group">   
+				     	<label for="price" th:text="Price"></label>
+				        <input type="number" min="0" value="0" step="0.05" class="form-control" th:required="required" th:field="*{price}" />
+					</div>
+					<div class="form-group">   
+				     	<label for="size" th:text="Size"></label>
+				        <input type="number" min="1" value="1" step="1" class="form-control" th:required="required" th:field="*{size}" />
+					</div>
+					<div class="form-group">   
+						<label for="stock" th:text="Stock"></label>
+						<input type="number" min="0" value="0" step="1" class="form-control" th:required="required" th:field="*{stock}" />
+					</div>
+				    <input type="hidden" name="type" th:if="${isNew}" th:value="new" />
+					<input type="hidden" name="type" th:if="${isEdit}" th:value="edit" />
+				    <button type="submit" class="btn btn-secondary">Save</button>
+				    <input class="btn btn-secondary" type="Button" value="Back" onClick="history.go(-1)">
+				</form>
+			</div>
 		</div>
-		<div class="form-group">   
-			<label for="name" th:text="Name"></label>
-	        <input type="text"  class="form-control" th:required="required" th:field="*{name}" />
+	</div>
+</div>
+
+
+<div th:fragment="show-shoe">
+	<div class="container-sm">
+    <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-7">
+            <div class="row g-3">
+				<form action="#" th:action="@{/admin/show-shoe}" th:object="${shoe}" method="post">  
+					<div class="card">
+		                <div class="card-body">
+							<div class="form-row">
+		                        <div class="form-group col-12">   
+									<label><strong>Name </strong></label>
+									<p th:text="${shoe.name}"></p>
+								</div>
+		 						<div class="form-group col-12">
+									<label><strong>Color </strong></label>
+									<p th:text="${shoe.color}"></p>
+								</div>
+								<div class="form-group col-12"> 
+							     	<label><strong>Price </strong></label>
+							     	<p th:text="${shoe.price}"></p>
+								</div>
+								<div class="form-group col-12">   
+							     	<label><strong>Size </strong></label>
+							     	<p th:text="${shoe.size}"></p>
+								</div>
+								<div class="form-group col-12">  
+									<label><strong>Stock </strong></label>
+									<p th:text="${shoe.stock}"></p>
+								</div>
+							</div>
+		                </div>
+					</div>
+				</form>
+			    <form>
+					<input class="btn btn-secondary" type="Button" value="Back" onClick="history.go(-1)">
+				</form>
+			</div>
 		</div>
-		<div class="form-group">   
-			<label for="color" th:text="Color"></label>
-	        <input type="text"  class="form-control" th:required="required" th:field="*{color}" />
-		</div>
-		<div class="form-group">   
-	     	<label for="price" th:text="Price"></label>
-	        <input type="number" min="0" value="0" step="0.05" class="form-control" th:required="required" th:field="*{price}" />
-		</div>
-		<div class="form-group">   
-	     	<label for="size" th:text="Size"></label>
-	        <input type="number" min="1" value="1" step="1" class="form-control" th:required="required" th:field="*{size}" />
-		</div>
-		<div class="form-group">   
-			<label for="stock" th:text="Stock"></label>
-			<input type="number" min="0" value="0" step="1" class="form-control" th:required="required" th:field="*{stock}" />
-		</div>
-	    <input type="hidden" name="type" th:if="${isNew}" th:value="new" />
-		<input type="hidden" name="type" th:if="${isEdit}" th:value="edit" />
-	    <button type="submit" class="btn btn-secondary">Save</button>
-	</form>
+	</div>
 </div>
