--- a/shoeshop/src/main/resources/templates/fragment/shoe.html
+++ b/shoeshop/src/main/resources/templates/fragment/shoe.html
@@ -109,10 +109,19 @@
 					<div class="form-group">   
 						<label for="name" th:text="Name"></label>
 				        <input type="text"  class="form-control" th:required="required" th:field="*{name}" />
-					</div>
-					<div class="form-group">   
-						<label for="color" th:text="Color"></label>
-				        <input type="text"  class="form-control" th:required="required" th:field="*{color}" />
+					</div>			        
+			      	<div class="form-group">   
+					<label for="color">Color</label>
+						<select class="form-control" th:required="required" th:field="*{color}">
+							  <option value="Red">Red</option>
+							  <option value="Blue">Blue</option>
+							  <option value="Green">Green</option>
+							  <option value="Orange">Orange</option>
+							  <option value="Purple">Purple</option>
+							  <option value="Yellow">Yellow</option>
+							  <option value="Yellow">Brown</option>
+							  <option value="Yellow">Black</option>
+						</select>
 					</div>
 					<div class="form-group">   
 				     	<label for="price" th:text="Price"></label>
