--- a/shoeshop/src/main/resources/templates/admin/accueil.html
+++ b/shoeshop/src/main/resources/templates/admin/accueil.html
@@ -21,6 +21,9 @@
 						<li class="nav-item active">
 							<a class="nav-link" href="/accueil">Home<span class="sr-only"></span></a>
 						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="/about">About us<span class="sr-only"></span></a>
+						</li>
 					</ul>
 				</div>
 			</div>
